compiler/testData/diagnostics/tests/suppress/oneWarning/onExpression.kt
// FIR_IDENTICAL
fun foo(): Any? {
    @Suppress("REDUNDANT_NULLABLE")
    return null <!USELESS_CAST!>as Nothing??<!>
}